--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -3579,8 +3579,7 @@ p {
 
 .fb-modal-gallery {
   width: 90vw;
-  height: 85vh;
-  min-height: 450px;
+  padding-bottom: 57%;
   padding: 0;
   background: #000;
   border-radius: 0;
@@ -3596,7 +3595,10 @@ p {
     }
   }
   .swiper-container {
+    position: absolute;
     display: block;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
   }
