--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -3578,9 +3578,7 @@ p {
 }
 
 .fb-modal-gallery {
-  width: 90vw;
-  padding-bottom: 57%;
-  padding: 0;
+  width: 70vw;
   background: #000;
   border-radius: 0;
   .fmo-cross {
@@ -3595,12 +3593,10 @@ p {
     }
   }
   .swiper-container {
-    position: absolute;
+    position: relative;
     display: block;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
+    padding-bottom: 57%;
   }
   .swiper-wrapper {
     height: 100%;
@@ -3694,7 +3690,13 @@ p {
       }
     }
   }
-;
+
+  &.state-fit-contain {
+    background: #fff;
+    .full-size.img-cover {
+      background-size: contain !important;
+    }
+  }
 }
 
 .fb-modal-video-youtube {
