--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -3581,6 +3581,7 @@ p {
   width: 70vw;
   background: #000;
   border-radius: 0;
+  padding: 0;
   .fmo-cross {
     width: 90px;
     height: 90px;
