--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -3704,6 +3704,9 @@ p {
     background: #fff;
     .fmo-cross {
       background-color: #333 !important;
+      width: 45px;
+      height: 45px;
+      border-radius: 0;
     }
     .full-size.img-cover {
       background-size: contain !important;
