--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -3707,6 +3707,7 @@ p {
       width: 45px;
       height: 45px;
       border-radius: 0;
+      background-size: 16px 16px;
     }
     .full-size.img-cover {
       background-size: contain !important;
