--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -3729,7 +3729,7 @@ ol {
     position: absolute;
     z-index: 20;
     top: 0;
-    width: 50%;
+    width: 100px;
     height: 100%;
     &:before {
       pointer-events: none;
