--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -1456,7 +1456,7 @@ p {
       }
     }
   }
-  
+
 }
 
 
@@ -3810,6 +3810,8 @@ p {
 
   &.state-fit-contain {
     background: #fff;
+    width: 400px;
+    height: 800px;
     .fmo-cross {
       background-color: #333 !important;
       width: 45px;
