--- a/sources/sass/main.scss
+++ b/sources/sass/main.scss
@@ -3303,18 +3303,18 @@ p {
       margin-top: 10px;
     }
   }
-  .swiper-pagination-bullet-active {
-    &:before {
-      background: #fff;
-    }
-    .spb-label {
-      span {
-        opacity: 1;
-        transform: none;
-      }
-
-    }
-  }
+  //.swiper-pagination-bullet-active {
+  //  &:before {
+  //    background: #fff;
+  //  }
+  //  .spb-label {
+  //    span {
+  //      opacity: 1;
+  //      transform: none;
+  //    }
+  //
+  //  }
+  //}
 
 }
 
